--- a/main.html
+++ b/main.html
@@ -7,8 +7,9 @@
 </head>
 
 <body>
+	<hr class="line">
 	<h1>History</h1>
-	<hr>
+	<hr class="line">
 	<p>
 		<strong>Main articles:</strong>  History of blogging and online diary
 		<br> <br>
